--- a/_config.yml
+++ b/_config.yml
@@ -14,9 +14,10 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 title: Super Unprofessional League
+author: shrekshao
 email: sul@sul.com
 description: >- # this means to ignore newlines until "baseurl:"
-  powered by Super Unprofessional League
+  league description goes here
 baseurl: "/super-unprofessional-league-website" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 
@@ -37,14 +38,3 @@ plugins:
 #   - vendor/cache/
 #   - vendor/gems/
 #   - vendor/ruby/
-
-# page_gen-dirs: false
-
-# page_gen:
-#   - data: 'team'
-#     template: 'team'
-#     name: ''
-#     dir: 'team'
-
-# season_dir: 'season'
-# team_dir: 'team'
