--- a/_config.yml
+++ b/_config.yml
@@ -13,11 +13,11 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: Super Unprofessional League
-author: shrekshao
-email: sul@sul.com
+title: 健雄杯
+author: 狄学长shrekshao
+# email: sul@sul.com
 description: >- # this means to ignore newlines until "baseurl:"
-  league description goes here
+  东南大学吴健雄学院健雄杯足球赛，虽然是菜鸡互啄，但存放着我们美好青春的赛事
 baseurl: "/super-unprofessional-league-website" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 
