--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ baseurl: "/super-unprofessional-league-website" # the subpath of your site, e.g.
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 lang: zh
 languages: ["zh"]
-exclude_from_localizations: ["javascript", "images", "css"]
+exclude_from_localizations: ["_posts", javascript", "images", "css"]
 
 # Build settings
 markdown: kramdown
