--- a/_i18n/zh.yml
+++ b/_i18n/zh.yml
@@ -40,9 +40,12 @@ games:
   1/16: 1/16决赛
   1/16-final: 1/16决赛
   third-place-playoff: 三四名决赛
+  rank-playoff: 排位赛
   group: 小组赛
   group-r1: 小组赛第1轮
   group-r2: 小组赛第2轮
   group-r3: 小组赛第3轮
   group-r4: 小组赛第4轮
   group-r5: 小组赛第5轮
+  group-r6: 小组赛第6轮
+  league: 联赛
