season description, rule fix; schedule game (stats fix as well);

--- a/_data/seasons/2011/config.json
+++ b/_data/seasons/2011/config.json
@@ -1,5 +1,6 @@
 {
   "display_name": "11赛季",
+  "description": "淘汰赛赛季示例",
   "type": "group + knockout",
   "knockout_stage": [
     [
@@ -12,7 +13,7 @@
       ["613111", "610111", "4"]
     ],
     [
-      ["610092", "", ""],
+      ["610092", "611101", "1"],
       
       ["610101", "613111", "2"]
     ],
