--- a/_data/seasons/2011/config.json
+++ b/_data/seasons/2011/config.json
@@ -2,24 +2,28 @@
   "display_name": "11赛季",
   "description": "淘汰赛赛季示例",
   "type": "group + knockout",
-  "knockout_stage": [
-    [
-      ["610092", "", ""],
-      
-      ["", "", ""],
-
-      ["", "", ""],
-
-      ["613111", "610111", "4"]
-    ],
-    [
-      ["610092", "611101", "1"],
-      
-      ["610101", "613111", "2"]
-    ],
-    [
-      ["610092","613111", "final"]
+  "knockouts": {
+    "淘汰赛阶段": {
+    "bracket": [
+      [
+        ["610092", "", ""],
+        
+        ["", "", ""],
+  
+        ["", "", ""],
+  
+        ["613111", "610111", "4"]
+      ],
+      [
+        ["610092", "611101", "1"],
+        
+        ["610101", "613111", "2"]
+      ],
+      [
+        ["610092","613111", "final"]
+      ]
     ]
-  ],
+    }
+  },
   "winner": "610092"
 }
