--- a/_data/seasons/2013/config.json
+++ b/_data/seasons/2013/config.json
@@ -2,7 +2,7 @@
   "display_name": "13赛季",
   "description": "健雄杯2013赛季。吴院班级大三之后将打散进入各专业，所以对11级来说这是他们的最后一届健雄杯。\n小组赛+淘汰赛示例",
   "type": "group + knockout",
-  "group_stage": {
+  "groups": {
     "A": [
       "613111",
       "610122",
@@ -16,25 +16,29 @@
       "610112"
     ]
   },
-  "knockout_stage": [
-    [
-      ["610131", "610111", "2013-10-21-1"],
-      
-      ["613111", "610112", "2013-10-20-1"],
+  "knockouts": {
+    "淘汰赛阶段": {
+      "bracket": [
+        [
+          ["610131", "610111", "2013-10-21-1"],
+          
+          ["613111", "610112", "2013-10-20-1"],
 
-      ["613131", "611131", ""],
+          ["613131", "611131", ""],
 
-      ["610132", "611111", "2013-10-15-1"]
-    ],
-    [
-      ["610111", "613111", "2013-11-14-1"],
-      
-      ["611131", "610132", "2013-11-15-1"]
-    ],
-    [
-      ["613111","611131", "2013-11-17-1"]
-    ]
-  ],
+          ["610132", "611111", "2013-10-15-1"]
+        ],
+        [
+          ["610111", "613111", "2013-11-14-1"],
+          
+          ["611131", "610132", "2013-11-15-1"]
+        ],
+        [
+          ["613111","611131", "2013-11-17-1"]
+        ]
+      ]
+    }
+  },
   "winner": "613111",
   "rules": "*大一球队直接进入淘汰赛\n*各小组前两名出线"
 }
