--- a/_i18n/zh.yml
+++ b/_i18n/zh.yml
@@ -1,8 +1,14 @@
+global:
+  en: English
+  zh: 中文
+  ja: 日本語
 posts_title: 战报
 schedule: 赛程
 goal_scorers: 射手榜
+assist_list: 助攻榜
 season: 赛季
 season_list: 全部赛季
+league_website: 赛事网站
 player:
   photo: 头像
   name: 姓名
@@ -10,14 +16,27 @@ player:
   goals_penalty: |
     进球数
     (点球)
+  assists_penalty: |
+    助攻数
+    (造点)
   number: 号码
   position: 位置
   goals: 进球
+  assists: 助攻
+门将: 门将
+后卫: 后卫
+中场: 中场
+前锋: 前锋
 champion: 冠军
 knockout_stage: 淘汰赛阶段
 group_stage: 小组赛阶段
 rank_stage: 排位赛阶段
+qualify_stage: 预选赛阶段
+champion_cup: 冠军杯
+open_group: Open组完整排位分区
+yzb_group: 勇者杯分区
 games_list: 比赛
+penalty: 点球
 table:
   team_name: 队名
   played: 场次
@@ -45,6 +64,9 @@ games:
   rank-r1: 排位赛第1轮
   rank-r2: 排位赛第2轮
   rank-r3: 排位赛第3轮
+  rank-r4: 排位赛第4轮
+  rank-r5: 排位赛第5轮
+  rank-r6: 排位赛第6轮
   group: 小组赛
   group-r1: 小组赛第1轮
   group-r2: 小组赛第2轮
@@ -52,6 +74,7 @@ games:
   group-r4: 小组赛第4轮
   group-r5: 小组赛第5轮
   group-r6: 小组赛第6轮
+  qualify: 预选赛
   league: 联赛
   '#1': 第1轮
   '#2': 第2轮
@@ -73,3 +96,5 @@ games:
   '#18': 第18轮
   '#19': 第19轮
   '#20': 第20轮
+  '#21': 第21轮
+  '#22': 第22轮
